Fix: social icon spacing and size on smaller screens

--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -209,7 +209,7 @@ header nav>ul>*{
 }
 
 .nav-toggle-label{
-  display: none;
+  /* display: none; */
 }
 
 .social-icons{
@@ -629,13 +629,13 @@ footer{
     flex-direction: column;
     padding: 1%;
     align-items: start;
-    display: none;
+    /* display: none; */
   }
   
   header nav>ul{
     justify-content: flex-start;
     align-items: start;
-    align-content: flex-start;
+    /* align-content: center; */
   }
   
   header nav>ul>*{
@@ -657,6 +657,8 @@ footer{
   .social-icons{
     gap: 13%; 
     height: 10%;
+    width: 100%;
+    justify-content: center;
   }
   
   .social-icons img{
@@ -673,7 +675,7 @@ footer{
     .nav-toggle:checked ~ nav{
       display: block;
       height: auto;
-      background-color: #F8D0A1;
+      background-color: #F8D0A1 ;
     }
 
     .nav-toggle-label{
